[package]
name = "lpc176x5x"
version = "0.1.0"
authors = ["Raphael Nestler <raphael.nestler@gmail.com>"]
edition = "2018"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7.3", optional = true }
vcell = "0.1.2"

[features]
rt = ["cortex-m-rt/device"]